[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Room Scripts/menu scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu_backgrounds/MENUOVERLAYE2_black.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu_backgrounds/Sprite-0002.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu_backgrounds/MENUOVERLAYER1.png" type="Texture" id=4]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu_backgrounds/hand.png" type="Texture" id=6]

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -180.0
margin_bottom = 180.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="flicker" type="Timer" parent="."]

[node name="black" type="Sprite" parent="."]
position = Vector2( 0, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="static" type="Sprite" parent="."]
position = Vector2( 0, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="back" type="Sprite" parent="."]
modulate = Color( 0.53418, 0.53418, 0.53418, 1 )
position = Vector2( 0, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -4, 348 )
scale = Vector2( 2, 1 )
texture = ExtResource( 5 )
texture_scale = 25.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.0
margin_top = 210.0
margin_right = -8.0
margin_bottom = 374.0
rect_scale = Vector2( 2, 2 )

[node name="random_level" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 250.0
margin_bottom = 20.0
text = "Random Level"

[node name="Start_Story" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0
text = "Start map 2"

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 20.0
text = "Start map 1"

[node name="Optionsbutton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0
text = "Options"

[node name="Button" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 48.0
margin_right = 250.0
margin_bottom = 68.0
text = "to test menu"

[node name="test_level" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 250.0
margin_bottom = 68.0
text = "to test level"

[node name="Quitbutton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 250.0
margin_bottom = 92.0
text = "Quit"

[node name="hand" type="Sprite" parent="."]
position = Vector2( 620, 168 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -20, -15 )

[connection signal="timeout" from="flicker" to="." method="_on_flicker_timeout"]
[connection signal="pressed" from="VBoxContainer/random_level" to="." method="_on_random_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Start_Story" to="." method="_on_Start_Story_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/test_level" to="." method="_on_test_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitbutton" to="." method="_on_Quitbutton_pressed"]
